[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renpho-api"
version = "0.1.0"
description = "Unofficial Python client for the Renpho Health API — pull body composition data from Renpho smart scales."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "danvaneijck" }]
keywords = ["renpho", "health", "body-composition", "smart-scale", "api-client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "requests>=2.28",
    "pycryptodome>=3.15",
]

[project.optional-dependencies]
dotenv = ["python-dotenv>=1.0"]
dev = ["pytest>=7.0"]

[project.urls]
Repository = "https://github.com/danvaneijck/renpho-api"

[project.scripts]
renpho = "renpho.cli:main"

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
